# reddit-clon

./: .gitignore  LICENSE  docker-compose.yaml  postgres.env  pyproject.toml
src/: .env.example  .flake8  Dockerfile  gunicorn_conf.py  pyproject.toml  run.py  start.sh
src/app/api/api_v1/: router.py
src/app/api/api_v1/endpoints/: health_check.py
src/app/core/: config.py  secure.py
src/app/db/: base.py  init_db.py  session.py
src/app/models/: comment.py  post.py  user.py
src/app/shemas/: post.py  user.py
src/migrations/: env.py
src/migrations/versions/: 5776335dcf11_init_db.py
